removed webconfig java